--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Submission</title>
     <link rel="stylesheet" href="/Css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Playball&display=swap" rel="stylesheet">
+    <style>
+        .navigation{
+            background-color: red;
+        }
+    </style>
 </head>
 
 <body>
